--- a/cargo.toml
+++ b/cargo.toml
@@ -1,25 +1,24 @@
 [package]
-name = "solanalotto"
+name = "solanaLottery"
 version = "0.1.0"
 edition = "2018"
 license = "WTFPL"
 publish = false
 
+[dependencies]
+arrayref = "0.3.6"
+thiserror = "1.0.24"
+solana-program = "1.8.1"
+switchboard-program = "0.1.52" # requires `rustc --version` >= 1.51.0
+
 [features]
 no-entrypoint = []
 
-[dependencies]
-solana-program = "1.5.8"
-thiserror = "1.0.21"
-spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
-arrayref = "0.3.6"
-
 [dev-dependencies]
-assert_matches = "1.4.0"
-solana-sdk = "1.5.8"
-solana-program-test = "1.5.8"
-solana-validator = "1.5.8"
-tokio = { version = "0.3", features = ["macros"]}
+solana-program-test = "1.8.1"
+solana-sdk = "=1.8.1"
+solana-validator = "1.6.8"
 
 [lib]
+name = "sollotto_model_1"
 crate-type = ["cdylib", "lib"]
